[gd_scene load_steps=4 format=3 uid="uid://b0kg55fr0tvpj"]

[ext_resource type="Script" path="res://scripts/entities/PhysicsProp.gd" id="1_q7cdw"]
[ext_resource type="Script" path="res://scripts/components/InteractableComponent.gd" id="2_qohtm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_m58nn"]

[node name="PhysicsProp" type="RigidBody3D"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -47.3978, 1.97234, 39.4897)
script = ExtResource("1_q7cdw")

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_m58nn")

[node name="InteractableComponent" type="Node" parent="."]
script = ExtResource("2_qohtm")

[connection signal="interacted" from="InteractableComponent" to="." method="_on_interactable_component_interacted"]
